[package]
name = "zip-file-extractor"
version = "0.1.0"
description = "Tutorial: How to use Rust inside your Electron application with Neon Bindings. https://medium.com/@cazetto.andre/how-to-use-rust-inside-your-electron-application-using-neon-bindings-64bd83fec316"
authors = ["André Pesci Cazetto"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies.neon]
version = "0.10.0"
default-features = false
features = ["napi-6", "channel-api", "promise-api", "try-catch-api"]

[dependencies]
num_cpus = "1"
zip = "0.6.2"
rfd = "0.10.0"
tokio = { version = "1.21.2", features = ["full"] }
